src/containers/Tenant/Diagnostics/Healthcheck/Healthcheck.scss
@use '../DetailedOverview/DetailedOverview.scss' as detailedOverview;
@import '../../../../styles/mixins.scss';
@import '@gravity-ui/uikit/styles/mixins.scss';

.healthcheck {
    &__issues-list {
        padding: 25px 20px 20px;
    }

    &__issue-preview {
        margin-bottom: 15px;
    }

    &__issues {
        overflow-x: hidden;
        overflow-y: auto;

        height: 70vh;
        max-height: 70vh;
    }

    &__loader {
        display: flex;
        justify-content: center;
    }

    &__message-container {
        padding: 15px 0;
    }

    &__issues-list-header {
        display: flex;
        align-items: center;

        margin-bottom: 20px;
    }

    &__issues-list-header-title {
        margin: 0 10px 0 0;

        @include text-header-1();
    }

    &__issues-list-header-update {
        margin-left: 10px;
    }

    &__status-wrapper {
        display: flex;

        margin-bottom: detailedOverview.$section-title-margin;
        gap: 8px;
    }

    &__preview-title {
        font-weight: 600;
        line-height: detailedOverview.$section-title-line-height;
    }

    &__preview-content {
        line-height: 24px;
    }

    &__self-check-status-indicator {
        padding: 0 8px;

        font-size: 13px;
        line-height: 24px;

        border-radius: 4px;

        &_good,
        &_green {
            color: var(--yc-color-text-positive);
            background-color: var(--yc-color-base-positive);
        }
        &_degraded,
        &_yellow {
            color: var(--yc-color-text-warning-medium);
            background-color: var(--yc-color-base-warning);
        }

        &_blue {
            color: var(--yc-color-text-info);
            background-color: var(--yc-color-base-info);
        }

        &_emergency,
        &_red {
            color: var(--yc-color-text-danger);
            background-color: var(--yc-color-base-danger);
        }
        &_unspecified,
        &_gray,
        &_grey {
            color: var(--yc-color-text-misc);
            background-color: var(--yc-color-base-misc);
        }
        &_maintenance_required,
        &_orange {
            color: var(--yc-color-text-warning-heavy);
            background-color: var(--yc-color-infographics-warning-light);
        }
    }
}

